# Haskell-University-Solutions

./: README.md
semester-1/exercise1/: README.md  exercise1.cabal
semester-1/exercise1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/lib/x86_64-linux-ghc-8.0.2/exercise1-0.1.0.0-7bAbtm6tHPS587I51PvjTx/: Exercise.dyn_hi
semester-1/exercise1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/lib/x86_64-linux-ghc-8.0.2/exercise1-0.1.0.0-7bAbtm6tHPS587I51PvjTx/Exercise/: App.dyn_hi  Basic.hi  Monadic.hi
semester-1/exercise1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/pkgdb/: exercise1-0.1.0.0-7bAbtm6tHPS587I51PvjTx.conf  package.cache
semester-1/exercise1/app/: Main.hs
semester-1/exercise1/src/: Exercise.hs
semester-1/exercise1/src/Exercise/: App.hs  Basic.hs  Monadic.hs  Recursive.hs
