name:                exercise1
version:             0.1.0.0
synopsis:            An exercise from Haskell University
homepage:            https://github.com/wisn/tree/master/semester-1/exercise1#readme
license:             MIT
license-file:        LICENSE
author:              Wisnu Adi Nurcahyo
maintainer:          wisnu@nurcahyo.com
copyright:           2017 Wisnu Adi Nurcahyo
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/wisn/tree/master/semester-1/exercise1#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Exercise
                     , Exercise.App
                     , Exercise.Basic
                     , Exercise.Monadic
                     , Exercise.Recursive
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable exercise1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercise1
  default-language:    Haskell2010

test-suite exercise1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , exercise1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wisn/tree/master/semester-1/exercise1
